<resources>
    <string name="internetAccessAlertTitle">No Internet Access</string>
    <string name="internetAccessAlertMessage">This application needs internet access to operate properly. Please, connect to the internet and relaunch the application.</string>
    <string name="formEmptyFieldsTitle">Empty Fields</string>
    <string name="formEmptyFieldsMessage">Please fill in all fields!</string>
    <string name="formAcceptTermsTitle">Terms &amp; Conditions</string>
    <string name="formAcceptTermsMessage">You have to accept the terms to register!</string>
    <string name="formPasswordMatchTitle">Password Missmatch</string>
    <string name="formPasswordMatchMessage">The passwords provided do not match</string>
    <string name="logoutLoadingMessage">Logging out&#8230;</string>
    <string name="matchesLoadingMessage">Loading matches&#8230;</string>
    <string name="getProfInfoLoadingMessage">Retrieving profile info, please wait!</string>
    <string name="app_name">SoacialMe</string>
    <string name="menu_settings">Settings</string>
    <string name="loginLoadingTitle">Logging in&#8230;</string>
    <string name="loginLoadingMessage">Logging into your account, please wait!</string>
    <string name="loginLogoDescription">SocialMe logo</string>
    <string name="loginEmailFieldHint">E-mail</string>
    <string name="loginPasswordFieldHint">Password</string>
    <string name="loginLoginButtonLabel">Login</string>
    <string name="loginRegisterButtonLabel">Register</string>
    <string name="loginPasswordRecoveryLabel">Forgot your password?</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_recovery">Password Recovery</string>
    <string name="prLoadingTitle">Reseting&#8230;</string>
    <string name="prLoadingMessage">Reseting your password, please wait!</string>
    <string name="prPasswordRecoveryLabel">Please enter the email address used to create your account:</string>
    <string name="prResetButtonLabel">Reset Password</string>
    <string name="title_activity_register">Register Account</string>
    <string name="regLoadingMessage">Registering your account, please wait!</string>
    <string name="updateLoadingMessage">Updating your account, please wait!</string>
    <string name="regAvatarDescription">User Avatar</string>
    <string name="regAvatarEditInfoText">(Tap to change)</string>
    <string name="regFullNameFieldHint">Full Name</string>
    <string name="regRePasswordFieldHint">Password Confirmation</string>
    <string name="regDescriptionHint">Short description of yourself</string>
    <string name="regTermsAcceptLabel">I accept the terms</string>
    <string name="regTermsConditionsButtonText">Terms</string>
    <string name="delReqLoadingMessage">Removing request&#8230;</string>
    <string-array name="regSexOptions">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="regAgeOptions">
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>
    <string name="title_activity_map">Social Map</string>
    <string name="regTermsConditionsTitle">Terms &amp; Conditions</string>
    <string name="regTermsConditionsText">By using the SocialMe website you agree to be bound by the following Terms and Conditions.\n\nUNAUTHORISED WEBSITE USE\n\n    Illegal and/or unauthorised use of SocialMe website, including but not restricted to the unauthorised sale of tickets, as well as of any tool of the web environment in question, will be investigated and followed by every legal means that SocialMe possesses.\n\n\nTRANSACTION SAFETY\n\n    The SocialMe website has built the most contemporary and recognised security methods in terms of money transactions and data protection, while it ensures a constant service provision. More specifically, the Information Technology that the SocialMe website is using includes:\n\n\t1. Secure Sockets Layer (SSL) technology for managing the security of data transmission within our database\n\t2. Firewalls, for the protection of stored personal data\n\t3. The use of state-of-the-art technologies for the impeccable functioning and availability of our websiteAll transactions made through www.SocialMe.com are governed by the International and European Purchase Policy along with the Consumer Data Protection laws (Law 2251/1994), which refer to matters such as remote sales.\n\n\nPURCHASE POLICY\n\n    The goal of SocialMe is to make your purchase experience easy, quick and effective. The following purchase policies are designed to ensure you understand the purchase process through www.SocialMe.com as well as your obligations and rights.  Please contact us in case of any questions or queries. This Purchase Policy is subject to and incorporates by reference the Terms of Use. Each ticket that you purchase is a license to attend a particular event and is subject to the additional terms set forth on that ticket. PAYMENT METHODS For any Product or Service purchased through our website, SocialMe merely accepts credit cards. The credit card\’s charge is completed only after the transaction\’s completion. The SocialMe website has taken all necessary safety measures to secure the transactions made by the use of credit card. In case of charging failure, the order is instantly cancelled. PRICING ERRORS If the amount you have paid for a ticket is incorrect, regardless the reason (for example, false statement of personal data, misunderstanding information or temporary malfunction of our website) SocialMe holds the right to cancel your ticket(s) and refund the amount you have paid.\n\n\nORDER CONFIRMATION\n\n    In case you do not receive a confirmation message through a confirmation page after submitting your personal data and completing the payment, or in case of service interruption, or if it appears an error message, it is your responsibility to contact SocialMe and be informed whether your transaction has been successfully completed or not. SocialMe will not become responsible for monetary or other loss in case you have assumed that your order was not placed since you did not receive a confirmation of any kind. PICKING UP YOUR TICKETS Tickets may be picked up at designated distribution points or at the venue\’s box offices. While picking up your tickets you should always keep your Identification ID, passport, driver license, etc. We strongly recommend to be present at these points at least 30\' prior to the start of the performance. TICKET CANCELLATIONS /CHANGES After a transaction is completed no refund or ticket change is accepted. In addition, SocialMe cannot replace tickets that have been lost, stolen or destroyed.\n\n\nRESPONSIBILITY BOUNDARIES\n\n    SocialMe will not be liable for plausible damages resulted from misdelivered /undelivered orders; in any case, SocialMe will inform its website users whether there is any availability or not. Nonetheless, SocialMe will not be held responsible for possible system unavailability nor can guarantee a constant, accurate and without mistakes service provision. PERSONAL DATA PROTECTION All personal data used during a transaction in our website are being protected by the above terms, the Greek Law (Law 2472 / 1997, Law 207 / 1998, Law 79 / 2000 and article 8 - Law 2819 / 2000), as well as the European Law (Directive 95 / 46 / EC, Directive 97 / 66 / EC).\n\n\nSocialMe www.SocialMe.com\nEmail: info@SocialMe.com</string>
    <string name="mapMyProfileButtonLabel">My Profile</string>
    <string name="mapAddRequestButtonLabel">Add Request</string>
    <string name="mapUserProfileButtonLabel">User Profile</string>
    <string name="mapLogoutButtonLabel">Logout</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="mpAccountNameLabel">George Kallergis</string>
    <string name="mpAccountInfoLabel">Male, 26 years old!</string>
    <string name="mpAccountDescriptionLabel">Hej, I live in Stockholm and I study Software Engineering at KTH!</string>
    <string name="mpRequestsListTitleText">My Requests</string>
    <string name="mpAddRequestButtonLabel">Add Request</string>
    <string name="mpRequestInfoPopupTitle">Request Info</string>
    <string name="mpRequestInfoTypeLabelText">Type</string>
    <string name="mpRequestInfoDescriptionLabelText">Description</string>
    <string name="mpRequestInfoLongitudeLabelText">Longitude</string>
    <string name="mpRequestInfoLatitudeLabelText">Latitude</string>
    <string name="mpRequestInfoRangeLabelText">Range</string>
    <string name="mpRequestDeletePopupTitle">Delete Request</string>
    <string name="mpRequestDeletePopupMessage">Are you sure you want to delete this request?</string>
    <string name="mpRequestDeletePopupPositiveButton">Delete</string>
    <string name="mpRequestDeletePopupNegativeButton">Cancel</string>
    <string name="title_activity_add_request">Add Request</string>
    <string name="arRequestTypeLabelText">Select request type</string>
    <string name="arRequestRangeLabelText">Select request range</string>
    <string name="arRequestDescriptionHint">Enter a short description here&#8230;</string>
    <string name="arMakeVisibleToAnyoneText">Make this request visible to anyone</string>
    <string name="arAddButtonLabel">Publish</string>
    <string name="upAccountNameLabel"></string>
    <string name="upAccountInfoLabel"></string>
    <string name="upAccountDescriptionLabel"></string>
    <string name="upRequestsListTitleText">User Requests</string>
</resources>