<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3e3e3">
    
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	
	    <LinearLayout
	        android:id="@+id/loginLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <ImageView
	            android:id="@+id/loginSMLogo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_marginBottom="30dp"
	            android:layout_marginTop="40dp"
	            android:contentDescription="@string/loginLogoDescription"
	            android:src="@drawable/sm_logo" />
	
	        <EditText
	            android:id="@+id/loginEmail"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_marginBottom="15dp"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:ems="10"
	            android:hint="@string/loginEmailFieldHint"
	            android:inputType="textEmailAddress"
	            android:singleLine="true" >
	        </EditText>
	
	        <EditText
	            android:id="@+id/loginPassword"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:ems="10"
	            android:hint="@string/loginPasswordFieldHint"
	            android:inputType="textPassword"
	            android:singleLine="true" />
	
	        <LinearLayout
	            android:id="@+id/loginButtonsLayout"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_marginLeft="20dp"
	            android:layout_marginRight="20dp"
	            android:layout_marginTop="20dp"
	            android:layout_weight="1"
	            android:orientation="horizontal" >
	
	            <Button
	                android:id="@+id/loginLoginButton"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.5"
	                android:text="@string/loginLoginButtonLabel" />
	
	            <Button
	                android:id="@+id/loginRegisterButton"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.5"
	                android:text="@string/loginRegisterButtonLabel" />
	
	        </LinearLayout>

	        <TextView
	            android:id="@+id/loginPasswordRecoveryLink"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_marginBottom="30dp"
	            android:layout_marginTop="30dp"
	            android:text="@string/loginPasswordRecoveryLabel"
	            android:textColor="#2489CE"
	            android:textSize="16sp"
	            android:textStyle="bold" />
	        
	    </LinearLayout>
	</ScrollView>
</LinearLayout>