<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3e3e3">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
        <LinearLayout
            android:id="@+id/arAddRequestLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/arRequestTypeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/arRequestTypeLabelText"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />
    
            <Spinner
				android:id="@+id/arRequestTypeList"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dp"
				android:entries="@array/arRequestTypeList" />
    
            <TextView
                android:id="@+id/arRequestRangeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/arRequestRangeLabelText"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />
    
			<Spinner
			    android:id="@+id/arRequestRangeList"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="20dp"
			    android:entries="@array/arRequestRangeList" />
            
            <EditText
                android:id="@+id/arRequestDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:ems="10"
                android:layout_marginBottom="20dp"
                android:hint="@string/arRequestDescriptionHint"
                android:inputType="textMultiLine" />
            
			<CheckBox
			    android:id="@+id/arMakeVisibleToAnyone"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical|center_horizontal"
			    android:layout_marginBottom="30dp"
			    android:text="@string/arMakeVisibleToAnyoneText" />
            
            <Button
                android:id="@+id/arAddButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/arAddButtonLabel" />
            
        </LinearLayout>
    </ScrollView>
</LinearLayout>