<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3e3e3"
    android:orientation="vertical">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
        <LinearLayout
            android:id="@+id/upProfileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <LinearLayout
                android:id="@+id/upImageInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal" >
    
                <ImageView
                    android:id="@+id/uppAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:contentDescription="@string/regAvatarDescription"
                    android:src="@drawable/avatar" />
                
                <LinearLayout
                    android:id="@+id/upAccountInfoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >
        
                    <TextView
                        android:id="@+id/upAccountName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:text="@string/upAccountNameLabel"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    
                    <TextView
                        android:id="@+id/upAccountInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/upAccountInfoLabel"
                        android:textColor="#000"
                        android:textSize="16sp" />
                    
                    <TextView
                        android:id="@+id/upAccountDescritpion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upAccountDescriptionLabel"
                        android:textColor="#000"
                        android:textSize="16sp" />
                    
        
                </LinearLayout>
    
            </LinearLayout>
            
            <TextView
                android:id="@+id/upRequestsListTitle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#548eba"
                android:gravity="center_vertical"
                android:text="@string/upRequestsListTitleText"
                android:textColor="#fff"
                android:textSize="20sp" />
            
        </LinearLayout>
    </ScrollView>
    
    <ListView
        android:id="@+id/upRequestsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />
    
</LinearLayout>